# agentic-customer-support

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INTEGRATION_SUCCESS.md  MCP_INTEGRATION_SUMMARY.md  README.md  bundle-schema.json  databricks.yml  example_mcp_agent.py  pyproject.toml  pytest.ini  requirements.txt  run_integrated_agent.py  test_mcp_integration.py  test_mcp_only.py  validate_integration.py
.github/workflows/: ci.yaml  dev-deploy-agent.yml  dev-deploy-resources.yml  dev-ui-deploy.yaml  pr-validation.yml  prod-deploy-agent.yml  prod-deploy-resources.yml  prod-ui-deploy.yaml  staging-deploy-agent.yml  staging-deploy-resources.yml  staging-ui-deploy.yaml
configs/: deploy_agent.yaml  log_register_agent.yaml  topics.yaml  uc_config.yaml  vector_search.yaml
configs/agents/: account.yaml  bad_supervisor.yaml  billing.yaml  product.yaml  supervisor.yaml  tech_support.yaml
configs/data/: create_vector_indexes.yaml
notebooks/00_data_generation/: data_generation.py  delta_to_volume.py  query_generation.py
notebooks/01_vector_search_setup/: create_vector_indexes.py
notebooks/02_run_agent/: test_disable_tools.py  test_multi_agent.py
notebooks/02_run_agent/standalone_sub_agent/: test_account_agent.py  test_base_agent.py  test_billing_agent.py  test_product_agent.py  test_tech_support_agent.py
notebooks/03_log_register_agent/: log_register_agent.py
notebooks/04_deploy_agent/: deploy_agent.py
notebooks/04_evals/: run_offline_evals.py
notebooks/05_deploy_agent/: deploy_agent.py
notebooks/_dev/: deploy_agent.py  log_register_agent.py  test_base_agent.py
notebooks/_dev/account/: test_account_agent.py
notebooks/_dev/billing/: test_billing_agent.py
notebooks/_dev/product/: test_product_agent.py
notebooks/_dev/supervisor/: test_supervisor_agent.py
notebooks/_dev/tech_support/: test_tech_support_agent.py
resources/: README.md  create-vector-indexes.yml  log-register-deploy-agent.yml
resources/agent/: log_register_deploy_agent.yml  mcp_servers.yml
resources/data_pipelines/: create_vector_indexes.yml  data_generation.yml
resources/ui/: customer_support_app.yml
scripts/: generate-requirements.sh  generate_requirements.py  lint.sh  run_tech_support_agent.py
telco_support_agent/: README.md  __init__.py  config.py
telco_support_agent/agent/: agent.py  deploy.py  mcp_agent.py  mcp_driver.py  requirements.txt  run_agent.py  tools.py
telco_support_agent/agents/: __init__.py  account.py  base_agent.py  billing.py  config.py  product.py  supervisor.py  tech_support.py  types.py
telco_support_agent/agents/utils/: __init__.py  exceptions.py  message_formatting.py  tool_injection.py  topic_utils.py  trace_utils.py
telco_support_agent/config/: __init__.py  loader.py  notebooks.py  schemas.py
telco_support_agent/data/: __init__.py  config.py
telco_support_agent/data/generators/: __init__.py  base.py  billing.py  customers.py  knowledge_base.py  products.py
telco_support_agent/data/schemas/: __init__.py  billing.py  customers.py  knowledge_base.py  products.py
telco_support_agent/data/vector_search/: __init__.py  manager.py
telco_support_agent/evaluation/: __init__.py  utils.py
telco_support_agent/evaluation/scorers/: __init__.py  base_scorer.py  brand_compliance.py  data_privacy.py  query_resolution.py  response_clarity.py  routing_accuracy.py  tool_accuracy.py
telco_support_agent/mcp_servers/outage_info_server/: README.md  __init__.py  app.yaml  app_dev.yaml  app_prod.yaml  app_staging.yaml  deploy_app.sh  homepage.py  mcp_server.py  requirements.txt  telco_api.py
telco_support_agent/ops/: __init__.py  deployment.py  logging.py  monitoring.py  registry.py
telco_support_agent/tools/: __init__.py  account_agent_tools.py  base.py  initialization.py  registry.py  tool_info.py
telco_support_agent/tools/account/: __init__.py  functions.py  info.py
telco_support_agent/tools/billing/: __init__.py  functions.py
telco_support_agent/tools/product/: __init__.py  functions.py  info.py
telco_support_agent/tools/queries/: __init__.py  account.py  product.py
telco_support_agent/tools/supervisor/: __init__.py  functions.py
telco_support_agent/tools/tech_support/: __init__.py  retrieval.py
telco_support_agent/ui/: .gitignore  README.md  __init__.py  app.yaml  app_dev.yaml  app_local.yaml.example  app_prod.yaml  app_staging.yaml  deploy.sh  main.py  requirements.txt
telco_support_agent/ui/backend/: .env.example  README.md  requirements.txt  run_server.py
telco_support_agent/ui/backend/app/: __init__.py  config.py  main.py
telco_support_agent/ui/backend/app/routes/: agent.py
telco_support_agent/ui/backend/app/services/: telco_agent_service.py
telco_support_agent/ui/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
telco_support_agent/ui/frontend/src/: App.vue
telco_support_agent/ui/frontend/src/components/: ChatBot.vue  CustomerSelector.vue  Header.vue
telco_support_agent/ui/frontend/src/services/: api.ts
telco_support_agent/ui/static/: index.html
telco_support_agent/ui/static/assets/: index-35478f14.css  index-e8264ba5.js
telco_support_agent/utils/: __init__.py  config.py  logging_utils.py  spark_utils.py  topic_utils.py  uc_permissions.py
tests/: conftest.py
tests/test_data/: __init__.py  test_schemas.py
